--- a/projects/chatroom-rs/Cargo.toml
+++ b/projects/chatroom-rs/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 rand = "0.9.2"
 rocket = { version = "0.5.1", features = ["json"] }
+serde = { version = "1.0.228", features = ["derive"] }
